# teste-previsao1

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  comandos.txt  pyproject.toml
configs/: baseline.yaml  fast.yaml  fast_bova.yaml  fast_tri.yaml  final_A.yaml  final_B.yaml  forward_test.yaml  universe_b3.txt
docs/: conversa.txt  conversa2.txt  conversa3.txt  visao-geral-projeto.md
lightning_logs/version_0/: events.out.tfevents.1758552801.davidsc  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1758552822.davidsc
lightning_logs/version_10/: events.out.tfevents.1758558676.davidsc
lightning_logs/version_11/: events.out.tfevents.1758559004.davidsc
lightning_logs/version_12/: events.out.tfevents.1758559035.davidsc
lightning_logs/version_13/: events.out.tfevents.1758559067.davidsc
lightning_logs/version_14/: events.out.tfevents.1758559291.davidsc
lightning_logs/version_15/: events.out.tfevents.1758559322.davidsc
lightning_logs/version_16/: events.out.tfevents.1758559354.davidsc
lightning_logs/version_17/: events.out.tfevents.1758559652.davidsc
reports/: summary_baseline.csv  summary_smoke.csv  trades_BOVA11.SA.csv  trades_ITUB4.SA.csv  trades_PETR4.SA.csv  trades_VALE3.SA.csv
scripts/: clean_repo.py  daily_jobs.py  daily_report.py  grid_search.py  make_zip.py  nightly_forward_test.sh  nightly_scan.sh  registry_report.py  run_universe_scan.py  test_backtest_smoke.py  web_app.py
src/: app_config.py  backtest.py  config.py  cv.py  exp_store.py  features.py  ingest.py  labeling.py  metrics.py  models_ts.py  prep.py  run_experiment.py  signals.py  user_state.py
templates/: config.html  index.html
(+68 files in other folders)
