[tool.poetry]
name = "teste-previsao1"
version = "0.1.0"
description = ""
authors = ["davidsc <davidsc@zanotti.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
yfinance = "0.2.37"
neuralforecast = "1.7.2"
pytorch-forecasting = "1.0.0"
vectorbt = "0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
