[tool.poetry]
name = "teste-previsao1"
version = "0.1.0"
description = ""
authors = ["davidsc <davidsc@zanotti.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
yahooquery = "^2.3.0"
neuralforecast = "1.7.2"
pytorch-forecasting = "1.0.0"
vectorbt = "0.28.1"
lightning = "^2.5.5"
torchmetrics = "^1.8.2"
yfinance = "^0.2.66"
numpy = "1.23.5"
pandas = "1.5.3"
numba = "0.56.4"
ta = "^0.11.0"
scipy = "1.10.1"
scikit-learn = "1.4.2"
matplotlib = "3.8.4"
plotly = "5.22.0"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
